<resources>
    <string name="app_name">IITDost</string>
    <string name="title_home">Home</string>
    <string name="title_requests">My Requests</string>
    <string name="title_notifications">Notifications</string>
    <string name="request_a_document">Request a Document</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="search">Search</string>
    <string name="navDrawerTest">Test</string>
    <string name="iitdost">IITDOST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">WELCOME AYUSH PATEL</string>
    <string name="accounts_and_fee">Accounts and Fee</string>
    <string name="my_schedule_assistant">My Schedule Assistant</string>
    <string name="student_details">M. Tech (Mechanical) 2016MTC33406</string>
    <string name="student_name">ALPA MENON</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="menu">Menu</string>
    <string name="book_an_appointment_app_bar">BOOK AN APPOINTMENT</string>


    <!-- NAV VIEW -->
    <string name="user_name">Ayush Patel</string>
    <string name="user_dept">B. Tech (Computer Science)</string>
    <string name="user_entry">2016CS10396</string>

    <!--NAV Menu-->
    <string name="nav_menu_1">My Attendence</string>
    <string name="nav_menu_2">Find a Location</string>
    <string name="nav_menu_3">Give Feedback</string>
    <string name="nav_menu_4">Report a Problem</string>
    <string name="nav_menu_5">Information</string>
    <string name="nav_menu_6">News and Events</string>
    <string name="nav_menu_7">Settings</string>
    <string name="nav_menu_8">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back Button</string>
    <string name="select_department">SELECT DEPARTMENT</string>
    <string name="academic">ACADEMIC</string>
    <string name="administrative">ADMINISTRATIVE</string>
    <string name="others">OTHERS</string>
    <string name="who_do_you_want_to_meet">WHO DO YOU WANT TO MEET?</string>
    <string name="faculty">FACULTY</string>
    <string name="other_staff">OTHER STAFF</string>
    <string name="select_date_of_appointment">SELECT DATE OF APPOINTMENT</string>
    <string name="leftbutton">leftButton</string>
    <string name="rightbutton">rightButton</string>
    <string name="march_2018">March 2018</string>
    <string name="department_name_placeholder">Department Name Placeholder</string>
    <string name="purpose_of_appointment">PURPOSE OF APPOINTMENT</string>
    <string name="academic_doubts_amp_discussion"><![CDATA[Academic Doubts & Discussion]]></string>
    <string name="personal_query_amp_discussion"><![CDATA[Personal Query & Discussion]]></string>
    <string name="casual_meeting">Casual Meeting</string>
    <string name="others_purpose">Others</string>
    <string name="proceed">PROCEED</string>
    <string name="cancel">CANCEL</string>
    <string name="notifications">Notifications</string>
    <string name="requests">Requests</string>
    <string name="march_05_2018">March 05, 2018</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="available_slots">Available Slots:</string>
    <string name="select_time_of_appointment">SELECT TIME OF APPOINTMENT</string>
    <string name="prof_subashish_bannerji">Prof. Subashish Bannerji</string>
    <string name="prof_k_atreya">Prof. K Atreya</string>
    <string name="prof_image">Prof Image</string>
    <string name="mo_n5">Mo\n5</string>
    <string name="su_n4">Su\n4</string>
    <string name="book">BOOK</string>
    <string name="professor_image">Professor Image</string>
    <string name="prof_jyoti_kumar">Prof. Jyoti Kumar</string>
</resources>
