<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.iitdost.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/antonio_regular"
        android:text="@string/welcome"
        android:textColor="#238053"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#113157"
                android:fontFamily="@font/antonio_light"
                android:letterSpacing="0.1"
                android:text="@string/request_a_document"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#113157"
                android:fontFamily="@font/antonio_light"
                android:letterSpacing="0.1"
                android:text="@string/book_an_appointment"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#113157"
                android:fontFamily="@font/antonio_light"
                android:letterSpacing="0.1"
                android:text="@string/accounts_and_fee"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#238053"
                android:fontFamily="@font/antonio_light"
                android:letterSpacing="0.1"
                android:text="@string/my_schedule_assistant"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>